--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     I'm a Web Developer, I love to create beautiful and functional websites.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="" download="" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -46,14 +46,12 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        <!--Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.-->
-                    </p>
+                    I hold a BCom degree in Econometrics and Economics, 
+                    which has equipped me with a strong analytical foundation. Currently, 
+                    I'm immersed in a captivating software development internship at Uvu Africa, 
+                    where I fuse my economic expertise with the dynamic world of coding. 
+                    This experience not only sharpens my technical skills but also fuels my passion for creative problem-solving. 
+                    My journey is marked by a relentless pursuit of knowledge and a commitment to contributing to the ever-evolving tech landscape. 
                     <div class="btn-con">
                         <a href="#" class="main-btn">
                             <span class="btn-text">Download CV</span>
@@ -88,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="about-stats">
+           <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
@@ -98,8 +96,8 @@
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
-                        </div>
-                    </div>
+                        </div> 
+                    </div> 
                     <div class="progress-bar">
                         <p class="prog-title">css3</p>
                         <div class="progress-con">
@@ -107,7 +105,7 @@
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
-                        </div>
+                        </div> 
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
@@ -118,7 +116,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="progress-bar">
+                    <div class="progress-bar">
                         <p class="prog-title">ReactJS</p>
                         <div class="progress-con">
                             <p class="prog-text">75%</p>
@@ -126,18 +124,16 @@
                                 <span class="react"></span>
                             </div>
                         </div>
-                    </div>-->
-                   <!--
+                    </div>
                     <div class="progress-bar">
                         <p class="prog-title">NodeJS</p>
                         <div class="progress-con">
-                            <p class="prog-text">87%</p>
+                           <p class="prog-text">67%</p>
                             <div class="progress">
                                 <span class="node"></span>
                             </div>
                         </div>
-                   
-                    </div>-->
+                    </div>
                     <div class="progress-bar">
                         <p class="prog-title">Python</p>
                         <div class="progress-con">
@@ -220,10 +216,67 @@
             <p class="port-text">
                 Here is some of my work that I've done in various programming languages.
             </p>
-          <!--<div class="portfolios">
+          <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="images/RPSP.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/AyavuyaKobe/Rock-Paper-Scissors-in-Javascript" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <!--<a href="#" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>-->
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="images/CodeCraft.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/AyavuyaKobe/CodeCraft" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <!--<a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>-->
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="images/OnTheGoRentalslogo.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="#" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://codex-og-website.netlify.app" class="icon">
+                                <i class="fa fa-car" aria-hidden="true"></i>                            
+                            </a>
+                            <!--<a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>-->
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="images/metric shot.PNG" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -234,15 +287,15 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                            <!--<a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>-->
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="images/BankApp.PNG" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -253,70 +306,13 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                            <!--<a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>-->
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port3.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port4.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port5.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
+                <!--<div class="portfolio-item">
                     <div class="image">
                         <img src="img/port2.jpg" alt="">
                     </div>
@@ -456,7 +452,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : Cape Town, South Africa
+                                    <span>: Cape Town, South Africa</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -468,7 +464,7 @@
                                     <span>: Ayavuyakobe@yahoo.com</span>
                                 </p>
                             </div>
-                            <div class="contact-item">
+                            <!--<div class="contact-item">
                                 <div class="icon">
                                    <i class='fa fa-university'></i>
 
@@ -478,7 +474,7 @@
                                 <p>
                                     <span>: University of Johannesburg</span>
                                 </p>
-                            </div>
+                            </div>-->
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class='fas fa-phone-alt'></i>
@@ -490,7 +486,7 @@
                                     <span>: 0606449250</span>
                                 </p>
                             </div>
-                            <div class="contact-item">
+                          <!-- <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
                                     <span>Languages</span>
@@ -499,20 +495,14 @@
                                     <span>: IsiXhosa, English</span>
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-twitter"></i>
+                                <a href="https://www.linkedin.com/in/ayavuya-kobe-b90790284/" target="_blank">
+                                    <i class="fab fa-linkedin"></i>
                                 </a>
                                 <a href="https://github.com/" target="_blank">
                                     <i class="fab fa-github"></i>
-                                </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
                         </div>
