--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <a href="https://github.com/AyavuyaKobe/Rock-Paper-Scissors-in-Javascript" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <!--<a href="#" class="icon">
+                            <a href="https://cosmic-kringle-a98757.netlify.app" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
                             <a href="#" class="icon">
