--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023 - Present</p>
-                    <h5>Software Development Intern<span> - Uvu Africa</span></h5>
+                    <h5>Full-Stack Developer Intern<span> - Uvu Africa</span></h5>
                     <!--<p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>-->
