--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("xOVZT7p0u5qevjgCI");
+        })();
+    </script>
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
@@ -23,7 +28,7 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Ayavuya Kobe.</span>
-                    A Web Developer.
+                    A Software Developer Intern.
                 </h1>
                 <p>
                     I'm a Web Developer, I love to create beautiful and functional websites.
@@ -162,7 +167,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023 - Present</p>
-                    <h5>Full-Stack Developer Intern<span> - Uvu Africa</span></h5>
+                    <h5>Software Developer Intern<span> - Uvu Africa</span></h5>
                     <!--<p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>-->
@@ -231,7 +236,7 @@
                                 <i class="fab fa-behance"></i>
                             </a>
                             <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>-->
+                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
@@ -300,7 +305,7 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/VuyolwethuM6/Banking-App.git" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
